--- a/gravitee-apim-portal-webui/src/assets/i18n/fr.json
+++ b/gravitee-apim-portal-webui/src/assets/i18n/fr.json
@@ -354,7 +354,7 @@
         },
         "reset": "Réinitialiser",
         "success": "Propriétaire mis à jour",
-        "title": "Changer de propritétaire",
+        "title": "Changer de propriétaire",
         "transfer": "Transférer"
       }
     },
