--- a/gravitee-apim-repository/gravitee-apim-repository-elasticsearch/README.adoc
+++ b/gravitee-apim-repository/gravitee-apim-repository-elasticsearch/README.adoc
@@ -7,5 +7,7 @@ To do so you can use the following commands:
 
 * ES 5.x: `mvn clean test -Delasticsearch.version=5.6.16`
 * ES 6.x: `mvn clean test -Delasticsearch.version=6.8.23`
-* ES 7.x: `mvn clean test -Delasticsearch.version=7.17.8` (Default)
-
+* ES 7.x: `mvn clean test -Delasticsearch.version=7.17.8`
+* ES 8.x: `mvn clean test -Delasticsearch.version=8.7.0` (Default)
+* OS 1.x: `mvn clean test -Dsearch.type=opensearch -Dopensearch.version=1.3.9`
+* OS 2.x: `mvn clean test -Dsearch.type=opensearch -Dopensearch.version=2.6.0`
